# TinyPlants

./: .gitignore  Cargo.toml  README.md  db.db
assets/: index.html
migrations/: 1_init.sql  2_notif.sql  3_sent_at.sql
src/: db.rs  main.rs  migrate.rs
