[package]
name = "tinyplants"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0" }
r2d2 = "0.8.10"
r2d2_sqlite = "0.24.0"
anyhow = "1.0.81"
include_dir = "0.7.3"